--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@ button:hover{
 
 }
 .app__container{
+  max-width: 1000px;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
